--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,86 @@
-.outfit{
-    font-family: "Outfit", serif;
-    font-optical-sizing: auto;
+*{
+    font-family: open sans;
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+
+body{
+    color:rgb(34, 34, 34)
+}
+
+
+
+header{
+    background-color:#28C2FF ;
+    color: #ffffff;
+    padding: 20px;
+    display: flex;
+}
+.overview{
+    padding-bottom: 20px;
+}
+.contents{
+    display:flex;
+    width: 80%;
+    padding: 20px;
+    justify-content: center;
+}
+.table-of-content {
+    width: 25%;
+    padding: 30px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.table-of-content h4 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    color: #28C2FF;
+}
+.endpoints {
+    width: 70%;
+    padding: 30px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
+}
+.border-bottom{
+    border-bottom: 2px solid #28C2FF;
+    padding-bottom: 5px;
+}
+.endpoints h3 {
+    margin-bottom: 15px;
+    color: #28C2FF;
+    border-bottom: 2px solid #28C2FF;
+    padding-bottom: 5px;
+}
+
+/* Code Blocks */
+.code-base {
+    padding: 15px;
+    background-color: #eef6ff;
+    color: #333;
+    border-radius: 5px;
+    font-family: monospace;
+    font-size: 0.9rem;
+    white-space: pre-wrap;
+    overflow-x: auto;
+    border-left: 5px solid #28C2FF;
+}
+
+pre {
+    margin: 0;
+}
+
+ul{
+    padding-left: 20px;
+    padding-bottom: 20px;
+}
+/* Padding Utility */
+.padding {
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
